<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_settings_24dp" app:showAsAction="ifRoom"
        android:id="@+id/settings"
        android:title="@string/navigation_settings"/>

    <item android:icon="@drawable/ic_cancel_24dp" app:showAsAction="ifRoom"
        android:id="@+id/cancel_edit"
        android:title="@string/navigation_cancel"/>

    <item android:icon="@drawable/ic_edit_24dp" app:showAsAction="ifRoom"
        android:id="@+id/edit_deck"
        android:title="@string/navigation_edit_deck"/>

    <item android:icon="@drawable/ic_delete_24dp" app:showAsAction="ifRoom"
        android:id="@+id/delete_deck"
        android:title="@string/navigation_del_deck"/>



</menu>