...
    <string name="default_not_found">No results found</string>
    <string name="default_share">Share</string>
    <string name="default_search">Search</string>
    <string name="default_rarity">Rarity</string>
    <string name="default_set">Set</string>
    <string name="default_close">Close</string>
    <string name="default_cancel">Cancel</string>
    <string name="default_error_title">Error</string>
    <string name="default_deleted">Deleted</string>
    <string name="default_loading">Loading</string>
    <string name="default_error">An error occurred %s</string>

    <!-- Content description -->
...
    <string name="login_auth_password_error">Password with a minimum of 6 digits</string>

    <!-- Navigation -->
    <string name="navigation_decks">Decks</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_edit_deck">Edit</string>
    <string name="navigation_del_deck">Delete deck</string>
    <string name="navigation_del_card">Delete card(s)</string>
    <string name="navigation_cancel">Cancel</string>
    <string name="navigation_card">Card</string>
    <string name="navigation_cards">Cards</string>

    <!-- Decks -->
...
